Sync sanitized changes from internal main